--- a/app/src/main/res/layout/layout_cell_betslip.xml
+++ b/app/src/main/res/layout/layout_cell_betslip.xml
@@ -75,33 +75,30 @@
                 android:text="Risk:"
                 android:textSize="18sp" />
 
-            <RelativeLayout
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/textview_cell_betslip_risk"
                 android:layout_marginBottom="10dp"
-                android:layout_marginTop="10dp"
-                >
+                android:layout_marginTop="10dp">
 
                 <TextView
                     android:id="@+id/tv_$_1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignTop="@id/edittext_cell_betslip_risk"
-                    android:layout_alignBottom="@id/edittext_cell_betslip_risk"
+                    android:layout_marginRight="5dp"
                     android:gravity="center"
                     android:text="$"
-                    android:layout_marginRight="5dp"
                     android:textSize="20sp" />
 
                 <EditText
                     android:id="@+id/edittext_cell_betslip_risk"
                     android:layout_width="120dp"
                     android:layout_height="wrap_content"
-                    android:layout_toRightOf="@id/tv_$_1"
                     android:inputType="numberDecimal" />
 
-            </RelativeLayout>
+
+            </LinearLayout>
 
         </RelativeLayout>
 
@@ -117,34 +114,31 @@
                 android:text="To Win:"
                 android:textSize="18sp" />
 
-            <RelativeLayout
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/textview_cell_betslip_win"
                 android:layout_marginBottom="10dp"
-                android:layout_marginTop="10dp"
                 android:layout_marginRight="10dp"
-                >
+                android:layout_marginTop="10dp">
+
 
                 <TextView
                     android:id="@+id/tv_$_2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignTop="@id/edittext_cell_betslip_to_win"
-                    android:layout_alignBottom="@id/edittext_cell_betslip_to_win"
+                    android:layout_marginRight="5dp"
                     android:gravity="center"
                     android:text="$"
-                    android:layout_marginRight="5dp"
                     android:textSize="20sp" />
 
-            <EditText
-                android:id="@+id/edittext_cell_betslip_to_win"
-                android:layout_width="120dp"
-                android:layout_toRightOf="@id/tv_$_2"
-                android:layout_height="wrap_content"
-                android:inputType="numberDecimal" />
+                <EditText
+                    android:id="@+id/edittext_cell_betslip_to_win"
+                    android:layout_width="120dp"
+                    android:layout_height="wrap_content"
+                    android:inputType="numberDecimal" />
 
-                </RelativeLayout>
+            </LinearLayout>
 
         </RelativeLayout>
 
