--- a/app/src/main/res/layout/layout_cell_my_picks_list.xml
+++ b/app/src/main/res/layout/layout_cell_my_picks_list.xml
@@ -96,16 +96,15 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginStart="10dp"
-                android:layout_marginTop="10dp">
+                >
 
 
                 <TextView
 
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-
                     android:text="Team :"
-                    android:textSize="18sp"
+                    android:textSize="16sp"
 
                     />
 
@@ -115,10 +114,11 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:gravity="right"
+                    android:minLines="1"
                     android:maxLines="2"
                     android:text="California Dragons"
                     android:textColor="#ffff3100"
-                    android:textSize="20sp"
+                    android:textSize="16sp"
                     android:textStyle="bold"
 
                     />
@@ -132,7 +132,8 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginStart="10dp"
-                android:layout_marginTop="10dp">
+                android:layout_marginTop="5dp"
+                >
 
 
                 <TextView
@@ -140,7 +141,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Pool Name :"
-                    android:textSize="18sp"
+                    android:textSize="16sp"
                     android:visibility="gone" />
 
                 <TextView
@@ -149,10 +150,11 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:gravity="right"
+                    android:minLines="1"
                     android:maxLines="2"
                     android:text="California Dragons"
                     android:textColor="#ffff3100"
-                    android:textSize="20sp"
+                    android:textSize="16sp"
                     android:textStyle="bold"
                     android:visibility="gone" />
 
@@ -165,7 +167,8 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginStart="10dp"
-                android:layout_marginTop="10dp">
+                android:layout_marginTop="5dp"
+                >
 
 
                 <TextView
@@ -173,7 +176,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Points Spread :"
-                    android:textSize="18sp"
+                    android:textSize="16sp"
 
                     />
 
@@ -184,7 +187,7 @@
                     android:layout_alignParentRight="true"
                     android:text="200"
                     android:textColor="#ffff3100"
-                    android:textSize="20sp"
+                    android:textSize="16sp"
                     android:textStyle="bold" />
 
             </RelativeLayout>
@@ -196,16 +199,15 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginStart="10dp"
-                android:layout_marginTop="10dp">
+                android:layout_marginTop="5dp">
 
 
                 <TextView
 
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-
                     android:text="Stake Amount :"
-                    android:textSize="18sp"
+                    android:textSize="16sp"
 
                     />
 
@@ -216,7 +218,7 @@
                     android:layout_alignParentRight="true"
                     android:text="150"
                     android:textColor="#ffff3100"
-                    android:textSize="20sp"
+                    android:textSize="16sp"
                     android:textStyle="bold" />
 
             </RelativeLayout>
@@ -228,7 +230,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginStart="10dp"
-                android:layout_marginTop="10dp">
+                android:layout_marginTop="5dp">
 
 
                 <TextView
@@ -236,7 +238,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="To Win :"
-                    android:textSize="18sp"
+                    android:textSize="16sp"
 
                     />
 
@@ -247,7 +249,7 @@
                     android:layout_alignParentRight="true"
                     android:text="100"
                     android:textColor="#ffff3100"
-                    android:textSize="20sp"
+                    android:textSize="16sp"
                     android:textStyle="bold" />
 
             </RelativeLayout>
@@ -255,19 +257,19 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
+                android:layout_marginBottom="5dp"
                 android:layout_marginEnd="10dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginStart="10dp"
-                android:layout_marginTop="10dp">
+                android:layout_marginTop="5dp">
 
                 <TextView
 
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Bet Results :"
-                    android:textSize="18sp"
+                    android:textSize="16sp"
 
                     />
 
@@ -278,7 +280,7 @@
                     android:layout_alignParentRight="true"
                     android:text="Pending.."
                     android:textColor="#ffff3100"
-                    android:textSize="20sp"
+                    android:textSize="16sp"
                     android:textStyle="bold" />
 
             </RelativeLayout>
